--- a/assets/style.css
+++ b/assets/style.css
@@ -200,13 +200,12 @@ img{
 }
 
 .prep {
-    display:block;
     position:relative;
-    max-width: 120px;
-    max-height: 120px;
+    max-width: 100px;
+    max-height: 100px;
     border-radius: 15%;
-    top:30px;
-    left: -50%;
+    top: 20px;
+    
     
 
 }
@@ -230,8 +229,10 @@ img{
 h2, h4, .prep, .css, .javacup, p {
    display: flex;
    position:relative;
-   justify-content:space-around;
    margin-top: 10%;
-   align-content: flex-start;
+   align-content: left;
+   width:95%;
+   margin-left:10px;
+
 
 }
