--- a/assets/style.css
+++ b/assets/style.css
@@ -2,26 +2,28 @@
     margin:0;
     Padding:0;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    color: var(--text-dark);
 }
+
+:root {
+    --background-light: aliceblue;
+    --background-medium:rgb(71, 54, 106);
+    --border-medium: 10px solid rgb(50, 50, 132);
+    --border-light: 10px solid rgb(196, 180, 217);
+    --text-dark: rgb(39, 22, 49);
+    --text-light: rgb(196, 180, 217);
+}
+
+
 
 .banner{
     width: 100%;
-    height: 100vh;
-    table-layout:auto;
+    height: 300vh;
+    object-fit:contain;
+    /* table-layout:auto; */
     max-height:fit-content;
     background-image: linear-Gradient(rgba(237, 231, 231, 0.75),rgba(0,0,0,.75)), url(background1.png);
-    background-size:cover;
-    background-position: center;
-    display:flex;
-    flex-direction: column;
-}
-.banner2 {
-    width: 100%;
-    height: 200vh;
-    max-height: max-content;
-    background-image: linear-Gradient(rgba(237, 231, 231, 0.75),rgba(0,0,0,.75)), url(background1.png);
-    background-size:200%;
-    background-position: center;
+
 }
 
 
@@ -35,6 +37,7 @@ a {
 p {
     text-align: left;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 body {
@@ -48,7 +51,6 @@ header {
     display: flex;
     flex-wrap: wrap;
     position: relative;
-   
 }
 
 
@@ -56,10 +58,8 @@ h1 {
     display:block;
     font-size: 40px;
     font-style: italic;
-    color: rgb(50, 50, 132);
-
-    
-    
+    /* color: rgb(50, 50, 132); */
+    color:var(--text-dark);
 }
 
 
@@ -69,8 +69,7 @@ h1 {
     padding: 35px 0;
     display:flex;
     align-items: center;
-    justify-content:space-between;
-    
+    justify-content:space-between; 
 }
 
 .navbar ul li {
@@ -79,165 +78,343 @@ h1 {
     padding:3px;
     margin: 0 20px;
     position:relative;
-
-
 }
+
 
 .navbar ul li a {
     text-decoration: none;
     color: rgb(50, 50, 132);
     text-transform: uppercase;
     font-weight: bold;
-
 }
 
 .navbar ul li::after {
     content: '';
     height: 3px;
     width:0;
-    background: #421d70;
+    background: #44246b;
     position:absolute;
     left: 0;
     bottom:0;
     transition: 0.5s;
-
-
 }
+
 
 .navbar ul li:hover::after {
     width:100%;
 }
 
+
 .header {
-    background-color: rgb(202, 201, 201);
+    background-color: rgb(205, 196, 211);
    
 }
+
 /* left section of the site */
 .content{
     display:block;
     position:absolute;
-    width: 60%;
+    max-width: 60%;
+    max-height: fit-content;
     top: 20%;
-    left:5px;
+    left:10px;
     color:rgb(39, 22, 49);
     background-color: aliceblue;
     height: 250%;
     opacity: 70%;
     border-radius: 5%;
     flex-direction: column;
-
 }
 
-.content h2{
+h2, h3 {
     display:inline-flex;
     flex-wrap: wrap;
+    justify-content: center;
     font-size: 30px;
     top: 30px;
     font-weight: 300px;
     margin-right:0%;
 }
 
-.content p {
-    margin: 10px auto;
-    margin-left: 5%;
-    font-weight: 100;
-    line-height:25px
+h4 {
+    display:inline-flex;
+    justify-content: center;
+    font-size: 20px;
+    color: whitesmoke;
+}
 
+
+.content p {
+    margin-left: 50px;
+    font-weight: 100;
+    line-height:25px;
+}
+
+.description {
+    color: rgb(196, 180, 217);
+    text-align: left;
 }
 
 .bio {
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
+    left:10px;
     flex-wrap: wrap;
-    max-width: 100%;
+    max-width: 90%;
     position: relative;
     margin-top: 5%;
-    margin-right:10px;
 }
 
-.portfolio {
-    display:flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 98%;
-    max-height: 1000px;
-    font-size: small;
-    text-align: center;
-    border-radius: 15px;
-    margin-top: 5%;
-    justify-content: left;
-
-}
-
-
-
-.sidebar {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 30%;
-    right: 2%;
-    width: 32%;
-    height:50%;
-    padding: 10px;
-    background-color: aliceblue;
-    opacity: 60%;
-    border-radius: 5%;
-    height: 150%;
-    
-}
-
-.sidebar h3 {
-    font-size: 24px;
-    margin-top: 10px auto;
-    margin-right: 50px;
-    font-weight: 300px;
-}
-
-img{
- margin-left: 35px;
-}  
-
-.flower{
-    position:relative;
-    display:block;
-    top: -25%;
-    margin-right:-50px;
-    max-height: 200px;
-    max-width: 200px;
-    left: 60px;
-    border-radius: 50%;
-    
-}
-.portfolio {
-    display:flex;
-    height:90vh;
-    width: 100%;
-    flex-wrap: wrap;
-    
-}
-
-
-.title {
+.titleportfolio {
     display: block;
     width:100%;
 }
-img {
-    display:inline-block;
-    max-width: 200px;
-    max-height: 200px;
-    border-radius: 10%;
+
+.portfolio {
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    width: 70%;
+    margin-left: 10%;
+    max-height: 800px;
+    font-size: small;
+    text-align: center;
+    border-radius: 20px;
+    margin-top: 5%;
+    justify-content: left;
+   
 }
 
 span {
     display:flex;
     justify-content: space-between;
-    flex:start;
-    padding:2%;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    padding:3%;
     max-width: 98%;
-    max-height: 25%;
+    max-height: 15%;
+    margin-top: 30px;
+    margin-left:70px;
+    Margin-right:-50px;
     border-radius: 15%;
-    border: 10px solid rgb(153, 137, 171);
+    border: 10px solid rgb(196, 180, 217);
+    background-color: #451f54;
+    text-decoration: none;
+    color:rgb(196, 180, 217);
+}
 
+span img {
+    display:flex;
+    Position:absolute;
+    justify-content: space-around;
+    margin-left:-125px;
+    margin-top: -20px;
+    width: 150px;
+    height: 130px;
+    border-radius: 15%;
+}
+
+span img:hover{
+    transform: translateY(-10px);
+    transform: translateX(30px);
+}
+
+/* right section of the site - "aside class sidebar" */
+
+.sidebar {
+    display: flex;
+    position:absolute;
+    flex-direction: column;
+    justify-content:first baseline;
+    float:right;
+    top: 40%;
+    right: 35px;
+    width: 32%;
+    height:40%;
+    padding: 10px;
+    background-color: aliceblue;
+    opacity: 60%;
+    border-radius: 5%;
+    height: 150%;
+}
+
+.sidebar h3 {
+    font-size: 24px;
+    margin-top: 15px auto;
+    margin-right: 50px;
+    font-weight: 300px;
+}
+
+/* top right image functions with Animation and alone */
+#flower{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    float: right;
+    margin-top: 30px;
+    margin-right:11%;
+    max-height: 200px;
+    max-width: 200px;
+    border-radius: 50%;
+}
+
+
+.credentials {
+    display:flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content:space-around;
+    width: 100%;
+    max-height: 1000px;
+    font-size: small;
+    text-align: center;
+    border-radius: 15px;
+    margin-top: 20%;
+    justify-content: left;
+    color:var(--text-dark);
+}
+
+.asidesection {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+}
+
+button {
+    display: flex;
+    align-items: center;
+    font-size: 25px;
+    background-color: rgb(63, 31, 71);
+    color:white;
+    border-radius:15px;
+    padding:2px;
+
+    transition:transform 0.3s;
+    /* transition-property: transform;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in-out;
+    transition-delay: 0; */
+}
+
+
+.btn:hover {
+    transform: translateY(-10px);
+    background-color: hotpink;
+    color: white;
+
+}
+
+.linklist:hover {
+    transform: translateY(-10px);
+    color: white;
+
+}
+
+/* keyframes for animations */
+
+@keyframes flowerslide {
+    from {
+        transform: translatex(-300px);
+    }
+
+    to {
+        transform: translatex(0);
+
+    }  
+}
+
+
+.flowerslide {
+    /* animation: flowerspin 1s ease-in; */
+}
+    /* Code broken down to animate slide right: 
+    animation-name: flowerspin;
+    animation-duration: 1s;
+    animation-timing-function: ease-in ;
+    animation-delay: 1s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: both; */
+
+@keyframes flowerspin {
+
+from {
+    transform:rotate(0); 
+}
+
+to {
+    transform:rotate(360deg);
+}
+ }
+
+.flowerspin {
+    animation: flowerspin 10s ease-in 0s infinite;
+}
+
+@keyframes bounce {
+0%,
+20%,
+50%,
+80%,
+100% {
+    transform: translateY(0);
+}
+
+40% {
+    transform:translateY(-20px);
+}
+
+60%{ 
+    transform:translateY(-10px);
+}
+
+}
+
+.bounce {
+    animation-name: bounce;
+}
+
+.bounce {
+    animation: bounce 1s ease 5s;
+    animation-iteration-count: 2;
+}
+
+form {
+    max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: left;
+}
+
+textarea {
+    max-height: 300px;
+    max-width: 300px;
+}
+
+input, textarea {
+    border: 3px solid #5d2e75;
+}
+
+input:focus, textarea:focus {
+    box-shadow: 0 0 4px rgba(255, 0, 0, 0.5);
+}
+
+::placeholder {
+    color: purple;
+    opacity: 1;
+}
+
+:-ms-input-placeholder {
+    color: purple;
+    opacity: 1;
+}
+::-ms-input-placeholder {
+    color: purple;
+    opacity: 1;
 }
