--- a/assets/style.css
+++ b/assets/style.css
@@ -73,7 +73,7 @@ h1 {
 }
 
 .navbar ul li {
-    list-style: none;
+    list-style: inline;
     display:inline-block;
     padding:3px;
     margin: 0 20px;
@@ -174,7 +174,7 @@ h4 {
 .portfolio {
     display:flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content:space-around;
     width: 70%;
     margin-left: 10%;
@@ -190,9 +190,9 @@ h4 {
 span {
     display:flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     flex-direction: column;
-    justify-content: center;
+    justify-content:left;
     padding:3%;
     max-width: 98%;
     max-height: 15%;
@@ -230,7 +230,7 @@ span img:hover{
     flex-direction: column;
     justify-content:first baseline;
     float:right;
-    top: 40%;
+    top: 50%;
     right: 35px;
     width: 32%;
     height:40%;
@@ -265,14 +265,14 @@ span img:hover{
 .credentials {
     display:flex;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content:space-around;
     width: 100%;
     max-height: 1000px;
     font-size: small;
     text-align: center;
     border-radius: 15px;
-    margin-top: 20%;
+    margin-top: 30%;
     justify-content: left;
     color:var(--text-dark);
 }
@@ -314,6 +314,15 @@ button {
     color: white;
 
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    margin-left: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
 
 /* keyframes for animations */
 
@@ -398,11 +407,29 @@ input:focus, textarea:focus {
     opacity: 1;
 }
 
-:-ms-input-placeholder {
-    color: purple;
-    opacity: 1;
-}
-::-ms-input-placeholder {
-    color: purple;
-    opacity: 1;
+
+/* Media Queries */
+
+/* For Mobile Phone: */
+@media screen and (max-width: 500px) {
+    /* header */
+    .col-1 {
+        
+    }
+    /* background */
+    .col-2 {
+        font-size: 30px;
+    }
+    /* main */
+    .col-3 {
+        font-size: 300px;
+
+    }
+    /* aside */
+    .col-4 {
+
+    }
+    .col-5 {
+
+    }
 }
